# gitta

./: .gitignore  .goreleaser.yml  AGENTS.md  Makefile  index.html  nfpm.keyring.yaml  nfpm.yaml  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  nightly.yml  release.yml
assets/: gitta  gitta.1  gitta.service
docs/: README.md
packaging/debian/: control
packaging/repo-signer/: README.md
scripts/: smoke-test.sh
src/gitta/: cli.py
src/gitta/tui/: app.py
